# xscen

./: .cruft.json  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .secrets.baseline  .yamllint.yaml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  environment-dev.yml  environment-docs.yml  environment.yml  pyproject.toml  pyproject.toml.new  requirements_upstream.txt  setup.cfg  setup.py  tox.ini  tox.toml  tox.toml.new
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/deactivated/: actions-versions-updater.yml  conda-build.yml
.github/workflows/: actions-versions-updater.yml  auto-accept-ci-changes.yml  bump-version.yml  cache-cleaner.yml  codeql-analysis.yml  codeql.yml  conda-build.yml  dependency-review.yml  first-pull-request.yml  first_pull_request.yml  label.yml  main.yml  publish-pypi.yml  remove-obsolete-cache.yml  scorecard.yml  tag-testpypi.yml  upstream.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt  requirements_upstream.txt
conda/xscen/: meta.yaml  recipe.yaml
docs/: Makefile  api.rst  columns.rst  conf.py  goodtoknow.rst  index.rst  installation.rst  make.bat  references.bib  references.rst  releasing.rst  templates.rst  usage.rst  xsdba.rst
docs/_static/: style.css
docs/notebooks/: 1_catalog.ipynb  2_getting_started.ipynb  3_diagnostics.ipynb  4_ensemble_reduction.ipynb  4_ensembles.ipynb  5_warminglevels.ipynb  6_config.ipynb  6_yaml.ipynb  7_global_tas_average_obs.ipynb  7_spatial_utils.ipynb  GlobalTasAverageObs.ipynb  advanced_example.ipynb  config_usage.ipynb  ensemble_reduction.ipynb  example.ipynb  getting_started.ipynb  global_tas_average_obs.ipynb  index.rst  warminglevels.ipynb
docs/notebooks/samples/: indicators.yml  pangeo-cmip6.csv  pangeo-cmip6.json  properties.yml  tutorial-catalog.csv  tutorial-catalog.json
docs/notebooks/samples/tutorial/ScenarioMIP/example-region/NCC/NorESM2-MM/ssp126/r1i1p1f1/day/: ScenarioMIP_NCC_NorESM2-MM_ssp126_r1i1p1f1_gn_raw.nc  tasmax-test.nc  tasmin-noon-test.nc
docs/notebooks/samples/tutorial/ScenarioMIP/example-region/NCC/NorESM2-MM/ssp126/r1i1p1f1/fx/: ScenarioMIP_NCC_NorESM2-MM_ssp126_r1i1p1f1_gn_raw.nc
docs/notebooks/samples/tutorial/ScenarioMIP/example-region/NCC/NorESM2-MM/ssp245/r1i1p1f1/day/: ScenarioMIP_NCC_NorESM2-MM_ssp245_r1i1p1f1_gn_raw.nc
docs/notebooks/samples/tutorial/ScenarioMIP/example-region/NCC/NorESM2-MM/ssp245/r1i1p1f1/fx/: ScenarioMIP_NCC_NorESM2-MM_ssp245_r1i1p1f1_gn_raw.nc
docs/notebooks/samples/tutorial/ScenarioMIP/example-region/NCC/NorESM2-MM/ssp245/r2i1p1f1/day/: ScenarioMIP_NCC_NorESM2-MM_ssp245_r2i1p1f1_gn_raw.nc
docs/notebooks/samples/tutorial/ScenarioMIP/example-region/NCC/NorESM2-MM/ssp245/r2i1p1f1/fx/: ScenarioMIP_NCC_NorESM2-MM_ssp245_r2i1p1f1_gn_raw.nc
docs/notebooks/samples/tutorial/ScenarioMIP/example-region/NCC/NorESM2-MM/ssp370/r1i1p1f1/day/: ScenarioMIP_NCC_NorESM2-MM_ssp370_r1i1p1f1_gn_raw.nc
scripts/: global_tas_average_obs.ipynb
src/xscen/: __init__.py  _types.py  aggregate.py  biasadjust.py  catalog.py  catutils.py  config.py  diagnostics.py  ensembles.py  extract.py  indicators.py  io.py  reduce.py  regrid.py  scripting.py  spatial.py  testing.py  utils.py  zarrzip.py
src/xscen/CVs/: frequency_to_timedelta.json  frequency_to_xrfreq.json  xrfreq_to_frequency.json  xrfreq_to_timedelta.json
src/xscen/data/: IPCC_annual_global_tas.nc  file_schema.yml
src/xscen/data/fr/LC_MESSAGES/: xscen.mo  xscen.po
src/xscen/xclim_modules/: __init__.py  conversions.py  conversions.yml
src/xsdba/: __init__.py  _adjustment.py  _processing.py  adjustment.py  base.py  calendar.py  cli.py  datachecks.py  detrending.py  formatting.py  indicator.py  locales.py  loess.py  logging.py  measures.py  nbutils.py  options.py  processing.py  properties.py  testing.py  typing.py  units.py  utils.py  xsdba.py
src/xsdba/testing/: __init__.py  helpers.py  registry.txt  utils.py
src/xsdba/xclim_submodules/: generic.py  run_length.py  stats.py
templates/: readme.rst
templates/1-basic_workflow_with_config/: config1.yml  indicators1.yml  paths1_example.yml  properties1.yml  workflow1.py
templates/2-indicators_only/: config2.yml  indicators2.yml  workflow2.py
templates/template1/: config1.yml  paths1_example.yml  workflow1.py
tests/: __init__.py  conftest.py  test_adjustment.py  test_aggregate.py  test_base.py  test_biasadjust.py  test_catalog.py  test_catutils.py  test_config.py  test_detrending.py  test_diagnostics.py  test_ensembles.py  test_extract.py  test_indicator.py  test_indicators.py  test_io.py  test_loess.py  test_measures.py  test_nbutils.py  test_processing.py  test_properties.py  test_regrid.py  test_scripting.py  test_spatial.py  test_testing.py  test_units.py  test_utils.py  test_xclimmod_conversions.py  test_xscen.py  test_xsdba.py
xscen/: __init__.py  _ensembles.py  _extract.py  _helpers.py  _ops.py  _regrid.py  _scripting.py  aggregate.py  aggregate_old.py  biasadjust.py  biasadjustment.py  catalog.py  catutils.py  checkups.py  common.py  config.py  diagnostics.py  ensemble.py  ensembles.py  extract.py  extraction.py  finalize.py  indicators.py  io.py  reduce.py  regrid.py  regridding.py  scr_utils.py  scripting.py  spatial.py  testing.py  utils.py
xscen/CVs/: frequency_to_timedelta.json  frequency_to_xrfreq.json  infer_resolution.json  resampling_methods.json  variable_names.json  xrfreq_to_frequency.json  xrfreq_to_timedelta.json
xscen/data/: IPCC_Atlas_WarmingLevels.csv  IPCC_annual_global_tas.csv  IPCC_annual_global_tas.nc  file_schema.yml
xscen/data/fr/LC_MESSAGES/: xscen.po
xscen/xclim_modules/: __init__.py  conversions.py  conversions.yml
(+3 files in other folders)
