# SPLIT: many checks removed

[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xsdba"
authors = [
  {name = "Éric Dupuis", email = "dupuis.eric@ouranos.ca"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
maintainers = [
  {name = "Éric Dupuis", email = "dupuis.eric@ouranos.ca"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9.0"
keywords = ["xsdba"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython"
]
dynamic = ["description", "version"]
dependencies = [
  "boltons",
  "bottleneck",
  "cf_xarray",
  "cftime",
  "dask",
  "jsonpickle",
  "numba",
  "numpy<2.0",
  "pint",
  "scipy",
  "statsmodels",
  "xarray",
  "yamale",
  "pip >=24.2.0",
  "bump-my-version >=0.25.1",
  "watchdog >=4.0.0",
  "flake8 >=7.1.1",
  "flake8-rst-docstrings >=0.3.0",
  "flit >=3.9.0,<4.0",
  "tox >=4.17.1",
  "coverage >=7.5.0",
  "coveralls >=4.0.1",
  "typer >=0.12.3",
  "pytest-cov >=5.0.0",
  "black ==24.8.0",
  "blackdoc ==0.3.9",
  "isort ==5.13.2",
  "numpydoc >=1.8.0",
  "pre-commit >=3.5.0",
  "ruff >=0.5.7"
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "pip >=24.2.0",
  "bump-my-version >=0.25.1",
  "watchdog >=4.0.0",
  "flake8 >=7.1.1",
  "flake8-rst-docstrings >=0.3.0",
  "flit >=3.9.0,<4.0",
  "tox >=4.17.1",
  "coverage >=7.5.0",
  "coveralls >=4.0.1",
  "mypy",
  "numpydoc >=1.8.0; python_version >='3.9'",
  "pytest <8.0.0",
  "pytest-cov >=5.0.0",
  "pytest-xdist >=3.2.0",
  "black ==24.8.0",
  "blackdoc ==0.3.9",
  "isort ==5.13.2",
  "ruff >=0.5.7",
  "pooch >=1.8.0",
  "pre-commit >=3.5.0",
  "xdoctest>=1.1.5"
]
docs = [
  # Documentation and examples
  "pooch >=1.8.0",
  "sphinx >=7.0.0",
  "sphinx-codeautolink",
  "sphinx-copybutton",
  "sphinx-intl",
  "sphinx-rtd-theme >=1.0",
  "nbsphinx",
  "pandoc",
  "ipython",
  "ipykernel",
  "jupyter_client",
  # ADD
  "sphinx-autobuild >=2024.4.16",
  "sphinx-autodoc-typehints",
  "sphinx-mdinclude",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-svg2pdfconverter[Cairosvg]"
]
extras = ["xclim>=0.52"]
all = ["xsdba[dev]", "xsdba[docs]"]

[project.scripts]
xsdba = "xsdba.cli:app"

[project.urls]
"Homepage" = "https://xsdba.readthedocs.io/"
"Changelog" = "https://xsdba.readthedocs.io/en/stable/changelog.html"
"About Ouranos" = "https://ouranos.ca/en/"
"Issue tracker" = "https://github.com/Ouranosinc/xsdba/issues"
"Source" = "https://github.com/Ouranosinc/xsdba"

[tool]

[tool.black]
target-version = [
  "py39",
  "py310",
  "py311",
  "py312"
]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/Ouranosinc/xsdba>`_ (latest)
------------------------------------------------------------
"""
replace = """\
`Unreleased <https://github.com/Ouranosinc/xsdba>`_ (latest)
------------------------------------------------------------

Contributors:

Changes
^^^^^^^
* No change.

Fixes
^^^^^
* No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/Ouranosinc/xsdba/tree/{new_version}>`_
----------------------------------------------------------
"""

[[tool.bumpversion.files]]
filename = "src/xsdba/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_xsdba.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.coverage.run]
omit = ["tests/*.py"]
relative_files = true
source = ["xsdba"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "environment-dev.yml",
  "environment-docs.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "src/xsdba",
  "tests/*.py",
  "tox.ini"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/xsdba*.rst",
  "docs/locales"
]

[tool.isort]
profile = "black"
py_version = 39
add_imports = "from __future__ import annotations"

[tool.mypy]
files = "."
python_version = 3.9
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "ES01",
  "EX01",
  "GL01",
  "GL08",
  "PR01",
  "PR02", #
  "PR04", #
  "PR07",
  "PR08",
  "PR10", #
  "RT01",
  "RT03",
  "SA01",
  "SA04",
  "SS03",
  "SS06"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--numprocesses=0",
  "--maxprocesses=8",
  "--dist=worksteal"
]
filterwarnings = ["ignore::UserWarning"]
strict_markers = true
testpaths = "tests"
usefixtures = "xdoctest_namespace"

[tool.ruff]
src = ["xsdba"]
line-length = 150
target-version = "py39"
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401", # non-imperative-mood
  # WIP xsdba
  "D200",
  "FLY002",
  "N801",
  "N803",
  "N806",
  "PTH123",
  "S310",
  "PERF401", # don't force list comprehensions
  "PERF203", # allow try/except in loop
  "E501", # line too long
  "W505" # doc line too long
]
preview = true
select = [
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["xsdba"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/xsdba/**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"
