[build-system]
requires = [
  "setuptools >=65.0.0",
  "setuptools-scm >=8.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "xscen"
authors = [
  {name = "Gabriel Rondeau-Genesse", email = "rondeau-genesse.gabriel@ouranos.ca"},
  {name = "Pascal Bourgault", email = "bourgault.pascal@ouranos.ca"},
  {name = "Juliette Lavoie", email = "lavoie.juliette@ouranos.ca"}
]
maintainers = [
  {name = "Gabriel Rondeau-Genesse", email = "rondeau-genesse.gabriel@ouranos.ca"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
description = "A climate change scenario-building analysis framework, built with xclim/xarray."
readme = "README.rst"
requires-python = ">=3.9.0"
keywords = ["xscen"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  # "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["version"]
dependencies = [
  "cartopy >=0.23.0",
  "cftime",
  "cf_xarray >=0.7.6",
  "clisops >=0.10",
  "dask",
  "flox",
  "fsspec",
  "geopandas",
  "h5netcdf",
  "h5py",
  "intake-esm >=2023.07.07,<v2024.2.6; python_version == '3.9'",
  "intake-esm >=2023.07.07; python_version >= '3.10'",
  "matplotlib",
  "netCDF4 <1.7",
  "numcodecs",
  "numpy",
  "pandas >=2.2",
  "parse",
  # Used when opening catalogs.
  "pyarrow>=10.0.1",
  "pyyaml",
  "rechunker",
  "scipy",
  "shapely >=2.0",
  "sparse",
  "toolz",
  "xarray >=2023.11.0, !=2024.6.0, <2024.09.0",
  "xclim >=0.50, <0.51",
  "zarr"
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "pip >=24.2.0",
  "babel",
  "black[jupyter] ==24.8.0",
  "blackdoc ==0.3.9",
  "bump-my-version >=0.26.0",
  "coverage >=7.5.0",
  "coveralls >=4.0.1",
  "flake8 >=7.1.1",
  "flake8-rst-docstrings >=0.3.0",
  "isort ==5.13.2",
  "mypy",
  "numpydoc >=1.8.0",
  "pooch",
  "pre-commit >=3.3.2",
  "pytest-cov >=5.0.0",
  "pytest >=8.3.2",
  "ruff >=0.5.7",
  "tox >=4.18.0",
  "watchdog >=4.0.0",
  "xdoctest"
]
docs = [
  # Documentation and examples
  "ipykernel",
  "ipython",
  "jupyter_client",
  "nbsphinx",
  "nbval",
  "sphinx >=7.0.0",
  "sphinx-autoapi",
  "sphinx-codeautolink",
  "sphinx-copybutton",
  "sphinx-intl",
  "sphinx-mdinclude",
  "sphinx-rtd-theme >=1.0",
  "sphinxcontrib-napoleon"
]
extra = [
  "xesmf>=0.7"
]
all = ["xscen[dev]", "xscen[docs]", "xscen[extra]"]

[project.urls]
"Homepage" = "https://xscen.readthedocs.io/"
"Changelog" = "https://xscen.readthedocs.io/en/stable/changelog.html"
"About Ouranos" = "https://ouranos.ca/en/"
"Issue tracker" = "https://github.com/Ouranosinc/xscen/issues"
"Source" = "https://github.com/Ouranosinc/xscen"

[tool]

[tool.black]
target-version = [
  "py39",
  "py310",
  "py311",
  "py312"
]

[tool.bumpversion]
current_version = "0.9.2-dev.11"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/Ouranosinc/xscen>`_ (latest)
------------------------------------------------------------
"""
replace = """\
`Unreleased <https://github.com/Ouranosinc/xscen>`_ (latest)
------------------------------------------------------------

Contributors:

Changes
^^^^^^^
* No change.

Fixes
^^^^^
* No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/Ouranosinc/xscen/tree/{new_version}>`_
----------------------------------------------------------------------
"""

[[tool.bumpversion.files]]
filename = "src/xscen/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.coverage.paths]
source = ["src/xscen/", "*/site-packages/xscen/"]

[tool.coverage.run]
omit = ["docs/notebooks/*.ipynb", "tests/*.py", "src/xscen/reduce.py"] # FIXME: Remove xscen/reduce.py when it's fully deleted.
relative_files = true
source = ["xscen"]

[tool.isort]
append_only = true
known_first_party = "xscen"
profile = "black"
py_version = 39

[tool.mypy]
files = "."
python_version = 3.9
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov=xscen",
  "--ignore-glob='*.ipynb_checkpoints'",
  "--strict-markers",
  "--verbose"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = "tests"
markers = ["requires_netcdf: marks tests that require netcdf files to run"]

[tool.ruff]
src = ["src/xscen"]
line-length = 150
target-version = "py39"
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401", # non-imperative-mood
  # The following are disabled because the codebase is not yet compliant.
  "N801", # invalid-class-name
  "N806", # non-lowercase-variable-in-function
  "PERF203", # try-except-in-loop
  "PERF401", # manual-list-comprehension
  "S110" # try-except-pass
]
preview = true
select = [
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["xscen"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**/*.py" = ["E402"]
"src/xscen/**/__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "xscen.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["xscen"]

# [tool.setuptools.packages.find]
# include = [
# ".zenodo.json",
# "AUTHORS.rst",
# "CHANGELOG.rst",
# "CONTRIBUTING.rst",
# "LICENSE",
# "Makefile",
# "README.rst",
# "docs/*.rst",
# "docs/Makefile",
# "docs/_static/_images/*.png",
# "docs/conf.py",
# "docs/make.bat",
# "docs/notebooks/.ipynb",
# "docs/notebooks/samples/*.csv",
# "docs/notebooks/samples/*.json",
# "docs/notebooks/samples/*.yml",
# "environment.yml",
# "environment-dev.yml",
# "src/xscen/**/*.py",
# "src/xscen/**/*.yml",
# "src/xscen/CVs/*.json",
# "src/xscen/data/*.csv",
# "src/xscen/data/**/*.mo",
# "src/xscen/data/**/*.po",
# "tests/*.py",
# "tox.ini"
# ]
# exclude = [
# "*.py[co]",
# "__pycache__",
# ".coveralls.yml",
# ".editorconfig",
# ".flake8",
# ".gitignore",
# ".pre-commit-config.yaml",
# ".readthedocs.yml",
# ".yamllint.yaml",
# "conda/xscen/*.yml",
# "docs/_*",
# "docs/apidoc/modules.rst",
# "docs/apidoc/xscen*.rst",
# "docs/locales",
# "docs/notesbnooks/samples/tutorial/**/*.nc",
# "templates"
# ]
