[build-system]
requires = ["flit_core >=3.11.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xscen"
authors = [
  {name = "Gabriel Rondeau-Genesse", email = "rondeau-genesse.gabriel@ouranos.ca"},
  {name = "Pascal Bourgault", email = "bourgault.pascal@ouranos.ca"},
  {name = "Juliette Lavoie", email = "lavoie.juliette@ouranos.ca"}
]
maintainers = [
  {name = "Gabriel Rondeau-Genesse", email = "rondeau-genesse.gabriel@ouranos.ca"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
readme = "README.rst"
requires-python = ">=3.10.0"
keywords = ["xscen"]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Typing :: Typed"
]
dynamic = ["description", "version"]
dependencies = [
  "cartopy >=0.23.0",
  "cftime",
  "cf_xarray >=0.7.6",
  "clisops >=0.16.1",
  "dask >=2024.8.1",
  "flox",
  "fsspec",
  "geopandas >=1.0",
  "h5netcdf >=1.5.0",
  "h5py >=3.12.1",
  "intake-esm ==2025.2.3",
  "matplotlib >=3.6",
  "netcdf4",
  "numcodecs <0.16.0",
  "numpy >=1.24",
  "openpyxl",
  "pandas >=2.2",
  "parse",
  "pyarrow >=15.0.0",
  "pydantic <2.12.0",
  "pyproj",
  "pyyaml",
  "rechunker >=0.5.3",
  "scipy >=1.11.0",
  "shapely >=2.0",
  "sparse",
  "toolz",
  "xarray >=2023.11.0, !=2024.6.0",
  "xclim >=0.56, <0.59",
  "xsdba >=0.4.0",
  "zarr >=2.13,<3.0"
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "babel >=2.17",
  "bump-my-version >=1.2.3",
  "codespell >=2.4.1",
  "coverage >=7.5.0",
  "deptry >=0.23.1",
  "flake8 >=7.3.0",
  "flake8-rst-docstrings >=0.3.1",
  "flit >=3.11.0,<4.0",
  "mypy >=1.18.2",
  "numpydoc >=1.9.0",
  "pip >=25.2",
  "pooch >=1.8.0",
  "pre-commit >=3.5.0",
  "pytest-cov >=5.0.0",
  "pytest >=8.3.2",
  "pytest-xdist[psutil] >=3.2.0",
  "ruff >=0.13.3",
  "tox >=4.30.3",
  "vulture >=2.14",
  "watchdog >=4.0.0",
  "xdoctest",
  "yamllint >=1.35.1"
]
docs = [
  # Documentation and examples
  "ipykernel",
  "ipython >=8.5.0",
  "jupyter_client",
  "nbsphinx >=0.9.5",
  "nbval",
  "sphinx >=7.1.0,<8.2",
  "sphinx-autodoc-typehints",
  "sphinx-codeautolink",
  "sphinx-copybutton",
  "sphinx-intl",
  "sphinx-mdinclude",
  "sphinx-rtd-theme >=1.0"
]
xesmf = [
  "xesmf >=0.7, !=0.8.8" # FIXME: 0.8.8 currently creates segfaults on ReadTheDocs.
]
extras = [
  "nc-time-axis >=1.3.1",
  "xscen[xesmf]"
]
all = ["xscen[dev]", "xscen[docs]", "xscen[extras]"]

[project.urls]
"Homepage" = "https://xscen.readthedocs.io/"
"Changelog" = "https://xscen.readthedocs.io/en/stable/changelog.html"
"About Ouranos" = "https://ouranos.ca/en/"
"Issue tracker" = "https://github.com/Ouranosinc/xscen/issues"
"Source" = "https://github.com/Ouranosinc/xscen"

[tool]

[tool.bumpversion]
current_version = "0.13.1"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/Ouranosinc/xscen>`_ (latest)
------------------------------------------------------------
"""
replace = """\
..
    `Unreleased <https://github.com/Ouranosinc/xscen>`_ (latest)
    ------------------------------------------------------------
    Contributors:

    Changes
    ^^^^^^^
    * No change.

    Fixes
    ^^^^^
    * No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/Ouranosinc/xscen/tree/{new_version}>`_ ({now:%Y-%m-%d})
-------------------------------------------------------------------------
"""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
include_bumps = ["release"]
search = "^version: \"[0-9]+\\.[0-9]+\\.[0-9]\""
regex = true
replace = "version: \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/xscen/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
skip = "docs/_build" # "docs/notebooks/*.ipynb"  # in case we need to skip specific notebooks
ignore-words-list = "anc,ans,astroid,attributs,coo,mesure,nam,ond,socio-economic,vas,winn"

[tool.coverage.paths]
source = ["src/xscen/", "*/site-packages/xscen/"]

[tool.coverage.run]
omit = ["docs/notebooks/*.ipynb", "tests/*.py"]
relative_files = true
source = ["xscen"]

[tool.deptry]
extend_exclude = ["docs"]
ignore_notebooks = true
pep621_dev_dependency_groups = ["all", "dev", "docs"]

[tool.deptry.package_module_name_map]
"pyyaml" = "yaml"
"toolz" = "tlz"
"netcdf4" = "netCDF4"

[tool.deptry.per_rule_ignores]
DEP002 = ["h5netcdf", "nc-time-axis", "openpyxl", "pyarrow", "pydantic"]
DEP004 = ["xscen"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "SECURITY.md",
  "docs/*.rst",
  "docs/Makefile",
  "docs/_static/_images/*.png",
  "docs/conf.py",
  "docs/make.bat",
  "docs/notebooks/*.ipynb",
  "docs/notebooks/*.rst",
  "docs/notebooks/samples/*.csv",
  "docs/notebooks/samples/*.json",
  "docs/notebooks/samples/*.yml",
  "docs/notebooks/samples/tutorial/**/*.nc",
  "requirements_upstream.txt",
  "src/xscen/**/*.py",
  "src/xscen/**/*.yml",
  "src/xscen/CVs/*.json",
  "src/xscen/data/*.nc",
  "src/xscen/data/fr/LC_MESSAGES/*.mo",
  "src/xscen/data/fr/LC_MESSAGES/*.po",
  "tests/*.py"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".cruft.json",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".secrets.baseline",
  ".yamllint.yaml",
  ".zizmor.yml",
  "docs/_build",
  "docs/apidoc/modules.rst",
  "docs/apidoc/xscen*.rst",
  "environment.yml",
  "environment-dev.yml",
  "scripts/*.ipynb",
  "templates",
  "tox.ini"
]

[tool.mypy]
files = "."
python_version = "3.10"
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
  "-ra",
  "--color=yes",
  "--ignore-glob='*.ipynb_checkpoints'",
  "--strict-config",
  "--strict-markers",
  "--verbose",
  "--numprocesses=0",
  "--maxprocesses=8",
  "--dist=worksteal"
]
filterwarnings = ["ignore::UserWarning"]
markers = ["requires_netcdf: marks tests that require netcdf files to run"]
pythonpath = ["src/xscen"]
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
src = ["src/xscen"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "D213", # multi-line-summary-second-line
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401", # non-imperative-mood
  # The following are disabled because the codebase is not yet compliant.
  "N801", # invalid-class-name
  "N806", # non-lowercase-variable-in-function
  "PERF203", # try-except-in-loop
  "PERF401", # manual-list-comprehension
  "S110" # try-except-pass
]
preview = true
select = [
  "B", # bugbear
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "I", # imports
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["xscen"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"docs/**/*.py" = ["E402"]
"src/xscen/**/__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = ["tas_midpoint"]
min_confidence = 90
paths = ["src/xscen", "tests"]
sort_by_size = true
